migrated watermarking under updated api
